[package]
name = "vector-lib"
version = "0.1.0"
authors = ["Vector Contributors <vector@datadoghq.com>"]
edition = "2021"
publish = false

[dependencies]
vector-buffers = { path = "../vector-buffers", default-features = false }
vector-common = { path = "../vector-common" }
vector-config = { path = "../vector-config" }
vector-core = { path = "../vector-core", default-features = false }
vector-lookup = { path = "../vector-lookup", features = ["test"] }
vrl = { workspace = true, optional = true }

[features]
proptest = []
test = []
vrl = ["vector-core/vrl", "dep:vrl"]
