[package]
name = "vector-lib"
version = "0.1.0"
authors = ["Vector Contributors <vector@datadoghq.com>"]
edition = "2021"
publish = false

[dependencies]
agent-common = { path = "../agent-common" }
vector-config = { path = "../vector-config" }
vector-core = { path = "../vector-core", default-features = false }
vrl = { workspace = true, optional = true }

[features]
proptest = []
test = []
vrl = ["vector-core/vrl", "dep:vrl"]
